Use bind are rfc2136 server for DNS01 challenges
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/devel/BUILD.bazel
+++ b/devel/BUILD.bazel
@@ -9,6 +9,7 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
+        "//devel/addon/bind:all-srcs",
         "//devel/addon/certmanager:all-srcs",
         "//devel/addon/ingressnginx:all-srcs",
         "//devel/addon/pebble:all-srcs",
