--- a/test/e2e/suite/issuers/acme/dnsproviders/BUILD.bazel
+++ b/test/e2e/suite/issuers/acme/dnsproviders/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "cloudflare.go",
         "dnsproviders.go",
+        "rfc2136.go",
     ],
     importpath = "github.com/jetstack/cert-manager/test/e2e/suite/issuers/acme/dnsproviders",
     tags = ["manual"],
