--- a/hack/boilerplate/BUILD.bazel
+++ b/hack/boilerplate/BUILD.bazel
@@ -1,4 +1,4 @@
-exports_files(["boilerplate.go.txt"])
+package(default_visibility = ["//visibility:public"])
 
 filegroup(
     name = "package-srcs",
