--- a/deploy/charts/cert-manager/crds/issuers.yaml
+++ b/deploy/charts/cert-manager/crds/issuers.yaml
@@ -1525,6 +1525,14 @@ spec:
               required:
               - secretName
               properties:
+                crlDistributionPoints:
+                  description: The CRL distribution points is an X.509 v3 certificate
+                    extension which identifies the location of the CRL from which
+                    the revocation of this certificate can be checked. If not set
+                    certificate will be issued without CDP. Values are strings.
+                  type: array
+                  items:
+                    type: string
                 secretName:
                   description: SecretName is the name of the secret used to sign Certificates
                     issued by this Issuer.
@@ -1533,6 +1541,10 @@ spec:
               type: object
               properties:
                 crlDistributionPoints:
+                  description: The CRL distribution points is an X.509 v3 certificate
+                    extension which identifies the location of the CRL from which
+                    the revocation of this certificate can be checked. If not set
+                    certificate will be issued without CDP. Values are strings.
                   type: array
                   items:
                     type: string
