--- a/deploy/manifests/00-crds.yaml
+++ b/deploy/manifests/00-crds.yaml
@@ -3675,6 +3675,14 @@ spec:
               required:
               - secretName
               properties:
+                crlDistributionPoints:
+                  description: The CRL distribution points is an X.509 v3 certificate
+                    extension which identifies the location of the CRL from which
+                    the revocation of this certificate can be checked. If not set
+                    certificate will be issued without CDP. Values are strings.
+                  type: array
+                  items:
+                    type: string
                 secretName:
                   description: SecretName is the name of the secret used to sign Certificates
                     issued by this Issuer.
@@ -3683,6 +3691,10 @@ spec:
               type: object
               properties:
                 crlDistributionPoints:
+                  description: The CRL distribution points is an X.509 v3 certificate
+                    extension which identifies the location of the CRL from which
+                    the revocation of this certificate can be checked. If not set
+                    certificate will be issued without CDP. Values are strings.
                   type: array
                   items:
                     type: string
@@ -5434,6 +5446,14 @@ spec:
               required:
               - secretName
               properties:
+                crlDistributionPoints:
+                  description: The CRL distribution points is an X.509 v3 certificate
+                    extension which identifies the location of the CRL from which
+                    the revocation of this certificate can be checked. If not set
+                    certificate will be issued without CDP. Values are strings.
+                  type: array
+                  items:
+                    type: string
                 secretName:
                   description: SecretName is the name of the secret used to sign Certificates
                     issued by this Issuer.
@@ -5442,6 +5462,10 @@ spec:
               type: object
               properties:
                 crlDistributionPoints:
+                  description: The CRL distribution points is an X.509 v3 certificate
+                    extension which identifies the location of the CRL from which
+                    the revocation of this certificate can be checked. If not set
+                    certificate will be issued without CDP. Values are strings.
                   type: array
                   items:
                     type: string
