--- a/pkg/webhook/BUILD.bazel
+++ b/pkg/webhook/BUILD.bazel
@@ -25,6 +25,7 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
+        "//pkg/webhook/authority:all-srcs",
         "//pkg/webhook/handlers:all-srcs",
         "//pkg/webhook/server:all-srcs",
     ],
