--- a/pkg/webhook/server/tls/BUILD.bazel
+++ b/pkg/webhook/server/tls/BUILD.bazel
@@ -3,14 +3,19 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "go_default_library",
     srcs = [
+        "dynamic_source.go",
         "file_source.go",
         "source.go",
     ],
     importpath = "github.com/jetstack/cert-manager/pkg/webhook/server/tls",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/logs:go_default_library",
+        "//pkg/util/pki:go_default_library",
+        "//pkg/webhook/authority:go_default_library",
         "@com_github_go_logr_logr//:go_default_library",
+        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
         "@io_k8s_sigs_controller_runtime//pkg/log:go_default_library",
     ],
 )
