--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
     ],
     importpath = "github.com/jetstack/cert-manager/pkg/util",
     visibility = ["//visibility:public"],
+    deps = ["//pkg/apis/certmanager/v1alpha2:go_default_library"],
 )
 
 go_test(
