--- a/pkg/controller/BUILD.bazel
+++ b/pkg/controller/BUILD.bazel
@@ -50,6 +50,7 @@ filegroup(
         "//pkg/controller/certificaterequests:all-srcs",
         "//pkg/controller/certificates:all-srcs",
         "//pkg/controller/clusterissuers:all-srcs",
+        "//pkg/controller/expcertificates:all-srcs",
         "//pkg/controller/ingress-shim:all-srcs",
         "//pkg/controller/issuers:all-srcs",
         "//pkg/controller/test:all-srcs",
