--- a/pkg/controller/expcertificates/trigger/BUILD.bazel
+++ b/pkg/controller/expcertificates/trigger/BUILD.bazel
@@ -3,8 +3,8 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "go_default_library",
     srcs = [
-        "controller.go",
         "policies.go",
+        "trigger_controller.go",
     ],
     importpath = "github.com/jetstack/cert-manager/pkg/controller/expcertificates/trigger",
     visibility = ["//visibility:public"],
@@ -13,14 +13,17 @@ go_library(
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
+        "//pkg/client/informers/externalversions:go_default_library",
         "//pkg/client/listers/certmanager/v1alpha2:go_default_library",
         "//pkg/controller:go_default_library",
         "//pkg/controller/expcertificates:go_default_library",
         "//pkg/logs:go_default_library",
         "//pkg/util/pki:go_default_library",
+        "@com_github_go_logr_logr//:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/labels:go_default_library",
+        "@io_k8s_client_go//informers:go_default_library",
         "@io_k8s_client_go//listers/core/v1:go_default_library",
         "@io_k8s_client_go//tools/cache:go_default_library",
         "@io_k8s_client_go//tools/record:go_default_library",
@@ -46,8 +49,8 @@ filegroup(
 go_test(
     name = "go_default_test",
     srcs = [
-        "controller_test.go",
         "policies_test.go",
+        "trigger_controller_test.go",
     ],
     embed = [":go_default_library"],
     deps = [
