--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -9,6 +9,7 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
+        "//test/integration/certificates:all-srcs",
         "//test/integration/conversion:all-srcs",
         "//test/integration/framework:all-srcs",
         "//test/integration/webhook:all-srcs",
