--- a/deploy/crds/crd-clusterissuers.yaml
+++ b/deploy/crds/crd-clusterissuers.yaml
@@ -496,6 +496,12 @@ spec:
                                   in the webhook provider implementation. This will
                                   typically be the name of the provider, e.g. 'cloudflare'.
                                 type: string
+                      failurePolicy:
+                        description: Controls how the self check behaves upon failure.
+                        type: string
+                        enum:
+                        - RetryForever
+                        - Ignore
                       http01:
                         description: ACMEChallengeSolverHTTP01 contains configuration
                           detailing how to solve HTTP01 challenges within a Kubernetes
