Updates BUILD.bazel for ./cmd/ctl
Signed-off-by: JoshVanL <vleeuwenjoshua@gmail.com>

--- a/cmd/ctl/BUILD.bazel
+++ b/cmd/ctl/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
     deps = [
         "//cmd/ctl/pkg/version:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
+        "@io_k8s_apiserver//pkg/server:go_default_library",
         "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
     ],
 )
