Update integration & unit tests for new CRD generation
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/pkg/api/BUILD.bazel
+++ b/pkg/api/BUILD.bazel
@@ -34,6 +34,7 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
+        "//pkg/api/testing:all-srcs",
         "//pkg/api/util:all-srcs",
     ],
     tags = ["automanaged"],
