Fix up chart and bazel build rules
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/deploy/BUILD.bazel
+++ b/deploy/BUILD.bazel
@@ -7,7 +7,7 @@ pkg_tar(
     mode = "0644",
     package_dir = "deploy",
     deps = [
-        "//deploy/charts/cert-manager",
+        "//deploy/charts/cert-manager:release-tar",
         "//deploy/manifests",
     ],
 )
