--- a/devel/addon/bind/manifests/service.yaml
+++ b/devel/addon/bind/manifests/service.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -7,7 +8,7 @@ metadata:
 spec:
   type: ClusterIP
   # hardcoded to make this service easily accessible via IP only
-  clusterIP: 10.0.0.16
+  clusterIP: {SERVICE_IP_PREFIX}.16
   ports:
   - port: 53
     targetPort: 53
