--- a/devel/addon/samplewebhook/chart/templates/deployment.yaml
+++ b/devel/addon/samplewebhook/chart/templates/deployment.yaml
@@ -27,6 +27,11 @@ spec:
           args:
             - --tls-cert-file=/tls/tls.crt
             - --tls-private-key-file=/tls/tls.key
+          # These are explicitly set as they are not granted by default in OpenShift
+          securityContext:
+            capabilities:
+              add:
+                - NET_BIND_SERVICE
           env:
             - name: GROUP_NAME
               value: {{ .Values.groupName | quote }}
