--- a/hack/bin/BUILD.bazel
+++ b/hack/bin/BUILD.bazel
@@ -59,6 +59,18 @@ genrule(
 )
 
 genrule(
+    name = "fetch_oc3",
+    srcs = select({
+        ":darwin": ["@oc_3_11_darwin//file"],
+        ":k8": ["@oc_3_11_linux//file"],
+    }),
+    outs = ["oc3"],
+    cmd = "cp $(SRCS) $@",
+    tags = ["manual"],
+    visibility = ["//visibility:public"],
+)
+
+genrule(
     name = "fetch_buildozer",
     srcs = select({
         ":darwin": ["@buildozer_darwin//file"],
