--- a/hack/bin/BUILD.bazel
+++ b/hack/bin/BUILD.bazel
@@ -61,8 +61,8 @@ genrule(
 genrule(
     name = "fetch_oc3",
     srcs = select({
-        ":darwin": ["@oc_3_11_darwin//file"],
-        ":k8": ["@oc_3_11_linux//file"],
+        ":darwin": ["@oc_3_11_darwin//:file"],
+        ":k8": ["@oc_3_11_linux//:file"],
     }),
     outs = ["oc3"],
     cmd = "cp $(SRCS) $@",
