Add '-ubi' suffix to AppVersion in UBI artifacts
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -17,7 +17,15 @@ exports_files([
 genrule(
     name = "save_docker_version",
     outs = ["version"],
-    cmd = "grep ^STABLE_DOCKER_TAG bazel-out/stable-status.txt | awk '{print $$2}' >$@",
+    cmd = "grep '^STABLE_DOCKER_TAG ' bazel-out/stable-status.txt | awk '{print $$2}' >$@",
+    stamp = 1,
+    visibility = ["//visibility:public"],
+)
+
+genrule(
+    name = "save_docker_version-ubi",
+    outs = ["version-ubi"],
+    cmd = "grep '^STABLE_DOCKER_TAG_UBI ' bazel-out/stable-status.txt | awk '{print $$2}' >$@",
     stamp = 1,
     visibility = ["//visibility:public"],
 )
