Initial version of clusterissuer in values.yaml
Signed-off-by: Aris van Ommeren <aristosvo@gmail.com>

--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -246,3 +246,25 @@ cainjector:
     # If no value is set, the chart's appVersion will be used.
     # tag: canary
     pullPolicy: IfNotPresent
+
+
+clusterIssuer: {}
+  # apiVersion: cert-manager.io/v1alpha2
+  # kind: ClusterIssuer
+  # metadata:
+  #   name: letsencrypt-staging
+  # spec:
+  #   acme:
+  #     # You must replace this email address with your own.
+  #     # Let's Encrypt will use this to contact you about expiring
+  #     # certificates, and issues related to your account.
+  #     email: user@example.com
+  #     server: https://acme-staging-v02.api.letsencrypt.org/directory
+  #     privateKeySecretRef:
+  #       # Secret resource that will be used to store the account's private key.
+  #       name: example-issuer-account-key
+  #     # Add a single challenge solver, HTTP01 using nginx
+  #     solvers:
+  #     - http01:
+  #         ingress:
+  #           class: nginx
