WIP: add sources for helm-operator
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/deploy/BUILD.bazel
+++ b/deploy/BUILD.bazel
@@ -26,6 +26,7 @@ filegroup(
         "//deploy/charts/cert-manager:all-srcs",
         "//deploy/crds:all-srcs",
         "//deploy/manifests:all-srcs",
+        "//deploy/olm:all-srcs",
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
