--- a/pkg/controller/expcertificates/trigger/BUILD.bazel
+++ b/pkg/controller/expcertificates/trigger/BUILD.bazel
@@ -22,6 +22,7 @@ go_library(
         "@com_github_go_logr_logr//:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
+        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/labels:go_default_library",
         "@io_k8s_client_go//informers:go_default_library",
         "@io_k8s_client_go//listers/core/v1:go_default_library",
