--- a/deploy/charts/cert-manager/templates/webhook-deployment.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-deployment.yaml
@@ -62,6 +62,8 @@ spec:
         {{- if .Values.webhook.extraArgs }}
 {{ toYaml .Values.webhook.extraArgs | indent 10 }}
         {{- end }}
+          ports:
+            containerPort: {{ .Values.webhook.securePort }}
           livenessProbe:
             httpGet:
               path: /livez
