Change the maintainer
Signed-off-by: Maartje Eyskens <maartje@eyskens.me>

--- a/deploy/olm/bundle/cert-manager-operator/0.15.0/cert-manager-operator.v0.15.0.clusterserviceversion.yaml
+++ b/deploy/olm/bundle/cert-manager-operator/0.15.0/cert-manager-operator.v0.15.0.clusterserviceversion.yaml
@@ -82,8 +82,8 @@ spec:
   - name: conatinerImage
     url: https://quay.io/jetstack/cert-manager:latest
   maintainers:
-  - email: james@jetstack.io
-    name: James Munnelly
+  - email: todo@jetstack.io
+    name: cert-manager team
   maturity: alpha
   provider:
     name: Jetstack
