--- a/deploy/olm/bundle/cert-manager-operator/0.15.0/cert-manager-operator.v0.15.0.clusterserviceversion.yaml
+++ b/deploy/olm/bundle/cert-manager-operator/0.15.0/cert-manager-operator.v0.15.0.clusterserviceversion.yaml
@@ -82,7 +82,7 @@ spec:
   - name: conatinerImage
     url: https://quay.io/jetstack/cert-manager:latest
   maintainers:
-  - email: todo@jetstack.io
+  - email: cert-manager-maintainers@jetstack.io
     name: cert-manager team
   maturity: alpha
   provider:
