--- a/deploy/olm/ubi-images/Dockerfile.cainjector
+++ b/deploy/olm/ubi-images/Dockerfile.cainjector
@@ -6,4 +6,13 @@ COPY --from=source /app /app
 ADD https://raw.githubusercontent.com/jetstack/cert-manager/master/LICENSE /licenses/LICENSE
 ADD https://raw.githubusercontent.com/jetstack/cert-manager/master/LICENSES /licenses/LICENSES
 
+### Required OpenShift Labels
+LABEL name="cert-manager cainjector" \
+      vendor="Jetstack" \
+      version="v0.15.0" \
+      release="1" \
+      summary="This is the cert-manager cainjector." \
+      description="This image contains the cert-manager cainjector."
+
+
 CMD "/app/cmd/cainjector/cainjector"
