--- a/deploy/olm/ubi-images/Dockerfile.controller
+++ b/deploy/olm/ubi-images/Dockerfile.controller
@@ -6,4 +6,12 @@ COPY --from=source /app /app
 ADD https://raw.githubusercontent.com/jetstack/cert-manager/master/LICENSE /licenses/LICENSE
 ADD https://raw.githubusercontent.com/jetstack/cert-manager/master/LICENSES /licenses/LICENSES
 
+### Required OpenShift Labels
+LABEL name="cert-manager controller" \
+      vendor="Jetstack" \
+      version="v0.15.0" \
+      release="1" \
+      summary="This is the cert-manager controller image." \
+      description="This image contains the main cert-mamager controller."
+
 CMD "/app/cmd/controller/controller"
