--- a/deploy/olm/ubi-images/Dockerfile.cainjector
+++ b/deploy/olm/ubi-images/Dockerfile.cainjector
@@ -17,13 +17,13 @@ FROM registry.access.redhat.com/ubi8/ubi-minimal
 
 COPY --from=source /app /app
 # Required Licenses
-ADD https://raw.githubusercontent.com/jetstack/cert-manager/master/LICENSE /licenses/LICENSE
-ADD https://raw.githubusercontent.com/jetstack/cert-manager/master/LICENSES /licenses/LICENSES
+ADD https://raw.githubusercontent.com/jetstack/cert-manager/v0.15.0-alpha.0/LICENSE /licenses/LICENSE
+ADD https://raw.githubusercontent.com/jetstack/cert-manager/v0.15.0-alpha.0/LICENSES /licenses/LICENSES
 
 ### Required OpenShift Labels
 LABEL name="cert-manager cainjector" \
       vendor="Jetstack" \
-      version="v0.15.0" \
+      version="v0.15.0-alpha.1" \
       release="1" \
       summary="This is the cert-manager cainjector." \
       description="This image contains the cert-manager cainjector."
