Add requestmanager controller
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/cmd/controller/app/BUILD.bazel
+++ b/cmd/controller/app/BUILD.bazel
@@ -15,6 +15,7 @@ go_library(
         "//pkg/controller/clusterissuers:go_default_library",
         "//pkg/controller/expcertificates/issuing:go_default_library",
         "//pkg/controller/expcertificates/keymanager:go_default_library",
+        "//pkg/controller/expcertificates/requestmanager:go_default_library",
         "//pkg/controller/expcertificates/trigger:go_default_library",
         "//pkg/feature:go_default_library",
         "//pkg/issuer/acme/dns/util:go_default_library",
