--- a/pkg/controller/expcertificates/requestmanager/BUILD.bazel
+++ b/pkg/controller/expcertificates/requestmanager/BUILD.bazel
@@ -1,27 +1,32 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "informers.go",
-        "listers.go",
-        "util.go",
-    ],
-    importpath = "github.com/jetstack/cert-manager/pkg/controller/expcertificates",
+    srcs = ["requestmanager_controller.go"],
+    importpath = "github.com/jetstack/cert-manager/pkg/controller/expcertificates/requestmanager",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/apis/meta/v1:go_default_library",
+        "//pkg/client/clientset/versioned:go_default_library",
+        "//pkg/client/informers/externalversions:go_default_library",
         "//pkg/client/listers/certmanager/v1alpha2:go_default_library",
         "//pkg/controller:go_default_library",
+        "//pkg/controller/expcertificates:go_default_library",
         "//pkg/controller/expcertificates/internal/predicate:go_default_library",
-        "//pkg/util:go_default_library",
+        "//pkg/logs:go_default_library",
         "//pkg/util/pki:go_default_library",
         "@com_github_go_logr_logr//:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/labels:go_default_library",
-        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
+        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
+        "@io_k8s_client_go//informers:go_default_library",
         "@io_k8s_client_go//listers/core/v1:go_default_library",
+        "@io_k8s_client_go//tools/cache:go_default_library",
+        "@io_k8s_client_go//tools/record:go_default_library",
         "@io_k8s_client_go//util/workqueue:go_default_library",
     ],
 )
@@ -35,24 +40,7 @@ filegroup(
 
 filegroup(
     name = "all-srcs",
-    srcs = [
-        ":package-srcs",
-        "//pkg/controller/expcertificates/internal/predicate:all-srcs",
-        "//pkg/controller/expcertificates/issuing:all-srcs",
-        "//pkg/controller/expcertificates/keymanager:all-srcs",
-        "//pkg/controller/expcertificates/requestmanager:all-srcs",
-        "//pkg/controller/expcertificates/trigger:all-srcs",
-    ],
+    srcs = [":package-srcs"],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
-)
-
-go_test(
-    name = "go_default_test",
-    srcs = ["util_test.go"],
-    embed = [":go_default_library"],
-    deps = [
-        "//pkg/apis/certmanager/v1alpha2:go_default_library",
-        "//pkg/util/pki:go_default_library",
-    ],
 )
